--- a/index.html
+++ b/index.html
@@ -4,8 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Grocery List</title>
+    <!-- <link rel="stylesheet" href="reset.css" /> -->
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,400;6..12,700&display=swap" rel="stylesheet">
+
+
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
     <h1>My Grocery List :)</h1>
+    <form>
+        <input type="text" placeholder="add an item to your list">
+        <button type ="submit">Add</button>
+    </form>
+    <ul>
+        <li>Milk</li>
+        <li>Eggs</li>
+        <li>Tortillas</li>
+    </ul>
 </body>
 </html>
