changed styling and created classes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Grocery List</title>
-    <!-- <link rel="stylesheet" href="reset.css" /> -->
+    <link rel="stylesheet" href="reset.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,15 +14,17 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <h1>My Grocery List :)</h1>
-    <form>
-        <input type="text" placeholder="add an item to your list">
-        <button type ="submit">Add</button>
+    <h1 class="Title">My Grocery List :)</h1>
+    <form class="newGroceryFrom">
+        <input id="newGrocery" autocomplete="off"
+        type="text" 
+        placeholder="add an item to your list">
+        <button id="addBtn" type ="submit">Add</button>
     </form>
-    <ul>
-        <li>Milk</li>
-        <li>Eggs</li>
-        <li>Tortillas</li>
+    <ul id="groceryList">
+        <li class="groceryItem">Milk</li>
+        <li class="groceryItem">Eggs</li>
+        <li class="groceryItem">Tortillas</li>
     </ul>
 </body>
 </html>
