--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Grocery List</title>
-    <link rel="stylesheet" href="reset.css" />
+    <!-- <link rel="stylesheet" href="reset.css" /> -->
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,11 +12,13 @@
 
 
     <link rel="stylesheet" href="style.css"/>
+    <script type="module" src="script.js" defer></script>
 </head>
 <body>
     <h1 class="Title">My Grocery List :)</h1>
     <form class="newGroceryFrom">
-        <input id="newGrocery" autocomplete="off"
+        <input id="newGrocery" 
+        autocomplete="off"
         type="text" 
         placeholder="add an item to your list">
         <button id="addBtn" type ="submit">Add</button>
