added peadb/shortid to script.js file

--- a/index.html
+++ b/index.html
@@ -23,10 +23,6 @@
         placeholder="add an item to your list">
         <button id="addBtn" type ="submit">Add</button>
     </form>
-    <ul id="groceryList">
-        <li class="groceryItem">Milk</li>
-        <li class="groceryItem">Eggs</li>
-        <li class="groceryItem">Tortillas</li>
-    </ul>
+    <ul id="groceryList"></ul>
 </body>
 </html>
